# aide

./: .all-contributorsrc  .clang-format  .clang-tidy  .cmake-format.yaml  .gitignore  .pre-commit-config.yaml  .travis.yml  .travis_unused.yml  3rd-party-licenses.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Contributors.md  ProjectOptions.cmake  README.md  aboutaidedialog_8cpp.html  aboutaidedialog_8cpp__incl.map  aboutaidedialog_8cpp__incl.md5  aboutaidedialog_8hpp.html  aboutaidedialog_8hpp__dep__incl.map  aboutaidedialog_8hpp__dep__incl.md5  aboutaidedialog_8hpp__incl.map  aboutaidedialog_8hpp__incl.md5  aboutaidedialog_8hpp_source.html  aboutaideusecase_8cpp.html  aboutaideusecase_8cpp__incl.map  aboutaideusecase_8cpp__incl.md5  aboutaideusecase_8hpp.html  aboutaideusecase_8hpp__dep__incl.map  aboutaideusecase_8hpp__dep__incl.md5  aboutaideusecase_8hpp__incl.map  aboutaideusecase_8hpp__incl.md5  aboutaideusecase_8hpp_source.html  actionregistry_8cpp.html  actionregistry_8cpp__incl.map  actionregistry_8cpp__incl.md5  actionregistry_8hpp.html  actionregistry_8hpp__dep__incl.map  actionregistry_8hpp__dep__incl.md5  actionregistry_8hpp__incl.map  (+1300 more)
aide/: CMakeLists.txt
aide/cmake/: AideStandardProjectSettings.cmake  GetGitRevisionDescription.cmake  StandardProjectSettings.cmake  VersionFromGit.cmake
aide/dependencies/: CMakeLists.txt  Qt.cmake  addlicensedependency.cmake  licenses.hml.in  licenses.md.in
aide/doc/: CMakeLists.txt  main.dox
aide/doc/dev_docs/: aide.tree  project.ihp  v.list
aide/doc/dev_docs/cfg/: buildprofiles.xml
aide/doc/dev_docs/dev_docs/: aide.tree  project.ihp
aide/doc/dev_docs/topics/: Code-samples.md  Getting-Help.md  Settings.md  User-Interface-Components.md  Welcome.md
aide/packaging/: AideConfig.cmake.in  CMakeLists.txt
aide/src/: CMakeLists.txt  application.cpp  applicationbuilder.cpp  applicationbuilder.hpp  applicationconfig.cpp
aide/src/application/: CMakeLists.txt  actionregistry.cpp  application.cpp  hierarchicalid.cpp  main.cpp  settingsinterface.cpp
aide/src/buildinformation/: CMakeLists.txt  GenerateBuildInformation.cmake  buildinformation.hpp.in
aide/src/core/: CMakeLists.txt  aboutaideusecase.cpp  aboutaideusecase.hpp  actionregistry.cpp  actionregistry.hpp  aideinformation.hpp  aideinformationpresenter.hpp  aidesettingsprovider.cpp  aidesettingsprovider.hpp  applicationclose.cpp  applicationclose.hpp  applicationclosecontroller.hpp  applicationcloseview.hpp  commonsettingskeys.hpp  hierarchicalid.cpp  loggerfactory.cpp  loggerfactory.hpp  mainwindowgeometryandstate.cpp  mainwindowgeometryandstate.hpp  mainwindowgeometryandstatecontroller.hpp  mainwindowinterface.cpp  mainwindowinterface.hpp  menucontainer.cpp  menucontainer.hpp  menucontainerinterface.cpp  qtsettings.cpp  qtsettings.hpp  settingsdialoginterface.hpp  settingsproviderinterface.cpp  treeitem.cpp  treeitem.hpp  treemodel.cpp  treemodel.hpp  userselection.hpp
aide/src/core/settings/: geometryandstatedata.hpp  settingsdialogchangepagecontroller.cpp  settingsdialogchangepagecontroller.hpp  settingsdialoggeometryandstate.cpp  settingsdialoggeometryandstate.hpp  settingsdialoggeometryandstatecontroller.hpp  settingsdialoginterface.hpp  settingspage.cpp  settingspagegrouptreemodel.cpp  settingspagegrouptreemodel.hpp  settingspageregistry.cpp  showsettingsdialog.cpp  showsettingsdialog.hpp  showsettingsdialogcontroller.hpp
aide/src/gui/: CMakeLists.txt  aboutaidedialog.cpp  aboutaidedialog.hpp  applicationtranslator.cpp  applicationtranslator.hpp  mainwindow.cpp  mainwindow.hpp  mainwindowcontroller.cpp  mainwindowcontroller.hpp  nullapplicationtranslator.cpp  settingsdialog.cpp  settingsdialog.hpp  thirdpartylicensesdialog.cpp  thirdpartylicensesdialog.hpp  translations.qrc.in
aide/src/gui/settings/: changedetector.cpp  changedetector.hpp  settingsdialog.cpp  settingsdialog.hpp  settingsdialogcontroller.cpp  (+1 more)
aide/src/include/: actionregistry.hpp  applicationtranslator.hpp  hierarchicalid.hpp  qtsettings.hpp
aide/src/logger/: CMakeLists.txt  logger.cpp  logger.hpp
aide/src/sentry/: CMakeLists.txt  nullsentry.cpp  sentry.cpp  sentry.hpp  sentrycleanup.cpp  sentrycleanup.hpp
aide/src/utils/: CMakeLists.txt  systemmemory_lin.cpp  systemmemory_mac.cpp  systemmemory_win.cpp
demo/: CMakeLists.txt  main.cpp
demo/cmake/: StandardProjectSettings.cmake
demo/src/: CMakeLists.txt  demosettingspage.cpp  demosettingspage.hpp  main.cpp
demo/src/res/: demo_de.ts  demo_en.ts  demo_translations.qrc.in  demosettingspage.ui
src/: CMakeLists.txt  application.cpp  id.cpp
src/api/: CMakeLists.txt  id.cpp
src/api/commandmanager/: CMakeLists.txt
src/buildinformation/: CMakeLists.txt
src/commandmanager/: CMakeLists.txt  commandmanager.cpp
src/include/aide/: application.hpp  hash.hpp  id.hpp  log_helper_macros.hpp  logger.hpp
src/logger/: CMakeLists.txt  logger.cpp
tests/: CMakeLists.txt
tests/cmake/: AideTestStandardProjectSettings.cmake  StandardProjectSettings.cmake
tests/dependencies/: CMakeLists.txt
tests/ut/: CMakeLists.txt  aboutaideusecasetest.cpp  actionregistrytest.cpp  aidesettingsprovidertest.cpp  applicationcloseinteractortest.cpp  applicationtest.cpp  applicationtranslatortest.cpp  buildinformationtest.cpp  catch_main.cpp  commandmanagertest.cpp  hierarchicalidtest.cpp  idtest.cpp  keymapcontextmenuprovidertest.cpp  keymappagetest.cpp  keymaptreemodeltest.cpp  loggertest.cpp  mainwindowgeometryandstatetest.cpp  mainwindowtest.cpp  menucontainertest.cpp  mockaboutdialog.cpp  mockaboutdialog.hpp  mockapplicationcloseview.cpp  mockapplicationcloseview.hpp  mockkeymappagewidget.cpp  mockkeymappagewidget.hpp  mockmainwindowview.cpp  mockmainwindowview.hpp  mocksettings.cpp  mocksettings.hpp  mocksettingsdialog.cpp  mocksettingsdialog.hpp  mocksettingspage.cpp  mocksettingspage.hpp  nulllogger.cpp  nulllogger.hpp  qtsettingstest.cpp  searchfilterwidgettest.cpp  searchlineedittest.cpp  settingsdialoggeometryandstatetest.cpp  settingspagegrouptreemodeltest.cpp  (+6 more)
tests/ut/res/: ut_icons.qrc  ut_sv.ts  ut_translations.qrc.in
(+280 files in other folders)
